| Summary: | ASTERISK-26743: PJPROJECT: Detecting compiled max log level does not work. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2017-01-23 11:42:29.000-0600 | Date Closed: | 2017-01-26 18:47:15.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip Resources/res_pjsip/Bundling |
| Versions: | GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The mechanism used for detecting the maximum log level compiled into the linked pjproject does not work. The API call simply stores the requested level into an integer and does no range checking. Asterisk was assuming that there was range checking and limited the new value to the allowable range. To get the actual maximum log level compiled into the linked pjproject we need to get and save off the initial set log level from pjproject. This is the maximum log level supported.
The issue was found because building Asterisk with TEST_FRAMEWORK enabled needed pjsua to build with a lower max log level enabled. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-01-26 18:47:16.281-0600 Change 4769 merged by zuul: PJPROJECT logging: Fix detection of max supported log level. [https://gerrit.asterisk.org/4769|https://gerrit.asterisk.org/4769] By: Friendly Automation (friendly-automation) 2017-01-26 18:50:37.367-0600 Change 4768 merged by zuul: PJPROJECT logging: Fix detection of max supported log level. [https://gerrit.asterisk.org/4768|https://gerrit.asterisk.org/4768] By: Friendly Automation (friendly-automation) 2017-01-26 18:53:24.003-0600 Change 4767 merged by George Joseph: PJPROJECT logging: Fix detection of max supported log level. [https://gerrit.asterisk.org/4767|https://gerrit.asterisk.org/4767] By: Friendly Automation (friendly-automation) 2017-01-26 18:53:46.468-0600 Change 4770 merged by George Joseph: PJPROJECT logging: Fix detection of max supported log level. [https://gerrit.asterisk.org/4770|https://gerrit.asterisk.org/4770] | ||